--- a/DataAcqPeripheralSOM.ioc
+++ b/DataAcqPeripheralSOM.ioc
@@ -22,36 +22,37 @@ Mcu.IPNb=5
 Mcu.Name=STM32L431C(B-C)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC14-OSC32_IN (PC14)
-Mcu.Pin1=PA1
-Mcu.Pin10=PB13
-Mcu.Pin11=PB14
-Mcu.Pin12=PB15
-Mcu.Pin13=PA8
-Mcu.Pin14=PA9
-Mcu.Pin15=PA10
-Mcu.Pin16=PA11
-Mcu.Pin17=PA12
-Mcu.Pin18=PA13 (JTMS-SWDIO)
-Mcu.Pin19=PA14 (JTCK-SWCLK)
-Mcu.Pin2=PA2
-Mcu.Pin20=PA15 (JTDI)
-Mcu.Pin21=PB3 (JTDO-TRACESWO)
-Mcu.Pin22=PB4 (NJTRST)
-Mcu.Pin23=PB5
-Mcu.Pin24=PB6
-Mcu.Pin25=PB7
-Mcu.Pin26=PB8
-Mcu.Pin27=PB9
-Mcu.Pin28=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin29=VP_SYS_VS_tim1
-Mcu.Pin3=PA4
-Mcu.Pin4=PA5
-Mcu.Pin5=PA6
-Mcu.Pin6=PA7
-Mcu.Pin7=PB10
-Mcu.Pin8=PB11
-Mcu.Pin9=PB12
-Mcu.PinsNb=30
+Mcu.Pin1=PC15-OSC32_OUT (PC15)
+Mcu.Pin10=PB12
+Mcu.Pin11=PB13
+Mcu.Pin12=PB14
+Mcu.Pin13=PB15
+Mcu.Pin14=PA8
+Mcu.Pin15=PA9
+Mcu.Pin16=PA10
+Mcu.Pin17=PA11
+Mcu.Pin18=PA12
+Mcu.Pin19=PA13 (JTMS-SWDIO)
+Mcu.Pin2=PA1
+Mcu.Pin20=PA14 (JTCK-SWCLK)
+Mcu.Pin21=PA15 (JTDI)
+Mcu.Pin22=PB3 (JTDO-TRACESWO)
+Mcu.Pin23=PB4 (NJTRST)
+Mcu.Pin24=PB5
+Mcu.Pin25=PB6
+Mcu.Pin26=PB7
+Mcu.Pin27=PB8
+Mcu.Pin28=PB9
+Mcu.Pin29=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin3=PA2
+Mcu.Pin30=VP_SYS_VS_tim1
+Mcu.Pin4=PA4
+Mcu.Pin5=PA5
+Mcu.Pin6=PA6
+Mcu.Pin7=PA7
+Mcu.Pin8=PB10
+Mcu.Pin9=PB11
+Mcu.PinsNb=31
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L431CBTx
@@ -75,13 +76,13 @@ NVIC.TimeBase=TIM1_UP_TIM16_IRQn
 NVIC.TimeBaseIP=TIM1
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 PA1.Locked=true
-PA1.Signal=GPIO_Input
+PA1.Signal=ADCx_IN6
 PA10.Locked=true
 PA10.Signal=USART1_RX
 PA11.Locked=true
-PA11.Signal=GPIO_Output
+PA11.Signal=GPIO_Input
 PA12.Locked=true
-PA12.Signal=GPIO_Output
+PA12.Signal=GPIO_Input
 PA13\ (JTMS-SWDIO).Locked=true
 PA13\ (JTMS-SWDIO).Signal=SYS_JTMS-SWDIO
 PA14\ (JTCK-SWCLK).Locked=true
@@ -89,7 +90,7 @@ PA14\ (JTCK-SWCLK).Signal=SYS_JTCK-SWCLK
 PA15\ (JTDI).Locked=true
 PA15\ (JTDI).Signal=GPIO_Output
 PA2.Locked=true
-PA2.Signal=GPIO_Input
+PA2.Signal=ADCx_IN7
 PA4.Locked=true
 PA4.Signal=SPI1_NSS
 PA5.Locked=true
@@ -131,7 +132,11 @@ PB9.Locked=true
 PB9.Mode=CAN_Activate
 PB9.Signal=CAN1_TX
 PC14-OSC32_IN\ (PC14).Locked=true
+PC14-OSC32_IN\ (PC14).Mode=LSE-External-Oscillator
 PC14-OSC32_IN\ (PC14).Signal=RCC_OSC32_IN
+PC15-OSC32_OUT\ (PC15).Locked=true
+PC15-OSC32_OUT\ (PC15).Mode=LSE-External-Oscillator
+PC15-OSC32_OUT\ (PC15).Signal=RCC_OSC32_OUT
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -168,9 +173,8 @@ RCC.FamilyName=M
 RCC.HSE_VALUE=8000000
 RCC.HSI48_VALUE=48000000
 RCC.HSI_VALUE=16000000
-RCC.IPParameters=FamilyName,HSE_VALUE,HSI48_VALUE,HSI_VALUE,LSCOPinFreq_Value,LSE_VALUE,LSI_VALUE,MSI_VALUE,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PLLSAI1PoutputFreq_Value,PLLSAI1QoutputFreq_Value,PLLSAI1RoutputFreq_Value,SAI1Freq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAI1OutputFreq_Value
+RCC.IPParameters=FamilyName,HSE_VALUE,HSI48_VALUE,HSI_VALUE,LSCOPinFreq_Value,LSI_VALUE,MSI_VALUE,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PLLSAI1PoutputFreq_Value,PLLSAI1QoutputFreq_Value,PLLSAI1RoutputFreq_Value,SAI1Freq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAI1OutputFreq_Value
 RCC.LSCOPinFreq_Value=32000
-RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=32000
 RCC.MSI_VALUE=4000000
 RCC.PLLPoutputFreq_Value=4571428.571428572
@@ -183,8 +187,13 @@ RCC.SAI1Freq_Value=4571428.571428572
 RCC.VCOInputFreq_Value=4000000
 RCC.VCOOutputFreq_Value=32000000
 RCC.VCOSAI1OutputFreq_Value=32000000
+SH.ADCx_IN6.0=ADC1_IN6
+SH.ADCx_IN6.ConfNb=1
+SH.ADCx_IN7.0=ADC1_IN7
+SH.ADCx_IN7.ConfNb=1
 VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
 VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
 VP_SYS_VS_tim1.Mode=TIM1
 VP_SYS_VS_tim1.Signal=SYS_VS_tim1
 board=custom
+rtos.0.ip=FREERTOS
